<resources>
    <string name="app_name">Nyam App</string>
    <string name="nyam_mobile">Nyam Mobile</string>
    <string name="intro_desc">Kalkulasi Diet Anda</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="hint_email">Masukkan email anda</string>
    <string name="hint_password">Masukkan password anda</string>
    <string name="hint_confirm_password">Konfirmasi password anda</string>
    <string name="scan_camera">Pindai Makanan</string>
    <string name="scan_text">Riwayat Pemindaian</string>
    <string name="setting_text">Pengaturan</string>
    <string name="scan_history">Riwayat</string>
    <string name="chatbot_text">Nyambot</string>
    <string name="home_desc">beranda</string>
    <string name="empty_history_error">Belum ada riwayat</string>
    <string name="example">Example</string>
    <string name="take_picture">Ambil Gambar</string>
    <string name="upload">Pindai Makanan</string>
    <string name="image_preview">Preview Gambar</string>
    <string name="today_callorie">Kalori hari ini: </string>
    <string name="current">sekarang</string>
    <string name="max_callorie">kalori maksimal</string>
    <string name="food_name">Ayam Goreng</string>
    <string name="kalori">Kalori</string>
    <string name="lemak">Lemak</string>
    <string name="_100">100</string>
    <string name="carbo">Karbohidrat</string>
    <string name="protein">Protein</string>
    <string name="weigth">Berat</string>
    <string name="calsium">Kalsium</string>
    <string name="date_title">Tanggal Scan:</string>
    <string name="berhasil_dihapus">Berhasil Dihapus</string>
    <string name="konfirmasi_hapus">Hapus hasil ini?</string>
    <string name="tidak">Tidak</string>
    <string name="iya">Iya</string>
    <string name="scan_food">Pindai Makanan</string>
    <string name="date_example">xx/xx/xxxx</string>
    <string name="ketik_pesan">Ketik Pesan</string>
    <string name="web_client_id">562855494147-c6ilobhoahuijhoosp8qq8uqtmr0ku76.apps.googleusercontent.com</string>
    <string name="logout">Logout</string>
    <string name="email_tidak_valid">Email tidak valid</string>
    <string name="password_minimal_8_karakter">Password minimal 8 karakter</string>
    <string name="user">Pengguna</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grams">%s g</string>
    <string name="kcal">%s kcal</string>
    <string name="warning_exceed">Kalori Harian Sudah Melebihi Batas</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="user_rank">%s \ntotal poin: %s</string>
    <string name="about">NYAM (Nutrisi Yang Akurat dan Mudah) adalah aplikasi berbasis web yang dikembangkan untuk mempermudah pengguna dalam memantau asupan kalori dan gizi melalui teknologi kecerdasan buatan.
        Aplikasi ini dapat mendeteksi makanan dari gambar dan menghitung nutrisi secara otomatis.
        \n\n💻 Developer
        \n1. Deva Alvyn Budinugraha
        \n2. Muhammad Reza Harsono
        \n3. Zakirio Hugoorazaq Wasis
        \n4. Handika Nur Aziz
        \n\n🏫 Asal Institusi
        \nPoliteknik Negeri Jakarta (PNJ),Indonesia</string>

</resources>