<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_yellow"
    android:transitionName="shared_element_container"
    tools:context=".ui.camera.CameraActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/my_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="@color/white"
            app:subtitleTextColor="@color/white"
            app:title="@string/scan_camera"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_preview"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_appbar" />

    <TextView
        android:id="@+id/tv_preview"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@color/white"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/jockey_one_font"
        android:gravity="center"
        android:text="@string/image_preview"
        android:textColor="@color/green_yellow"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/btn_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_appbar" />
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_camera"
        style="?attr/materialIconButtonFilledStyle"
        app:icon="@drawable/ic_camera"
        android:layout_marginTop="8dp"
        app:iconSize="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cream"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/btn_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_preview" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_gallery"
        style="?attr/materialIconButtonFilledStyle"
        app:icon="@drawable/ic_gallery"
        app:iconSize="50dp"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/btn_camera"
        app:layout_constraintTop_toBottomOf="@id/tv_preview" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/upload"
        android:textSize="18sp"
        android:fontFamily="@font/jockey_one_font"
        app:iconTint="@color/white"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_camera" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>